tests/negative/gold/conflicting2-test.gold
tests/negative/conflicting2-test.toit:7:1: error: Redefinition of 'foo' as global
foo := 2
^~~
tests/negative/conflicting2-test.toit:5:7: note: First definition of 'foo'
class foo:
      ^~~
Compilation failed
